--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -23,7 +23,12 @@
   {
    "cell_type": "code",
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T12:31:58.774620Z",
+     "start_time": "2025-07-10T12:31:58.766626Z"
+    }
+   },
    "source": [
     "# Basic Setup\n",
     "import sys, os, glob, json, subprocess\n",
@@ -97,8 +102,22 @@
     "\n",
     "print(\"hello0\")  # print hello 0 as a sanity check"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PDF inputs folder:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/pmid_pdfs\n",
+      "Ground truth folder:     /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
+      "LLM outputs folder:      /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/llm_output_dir\n",
+      "Dataset CSV path:        /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/llm_output_dir/phenopacket_dataset.csv\n",
+      "Validated JSONs folder:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/validated_jsons\n",
+      "Evaluation report path:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/reports/first_report.json\n",
+      "hello0\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -111,7 +130,12 @@
    "id": "dabf5f01d8e6a670"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T12:32:01.526973Z",
+     "start_time": "2025-07-10T12:32:01.508287Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Load datasets\n",
@@ -136,8 +160,17 @@
     "print(\"hello1\")  # print hello 1 as a sanity check"
    ],
    "id": "598b33092ab85352",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 5135 rows from dataset CSV\n",
+      "hello1\n"
+     ]
+    }
+   ],
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -150,7 +183,12 @@
    "id": "2a1755b2eb294368"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T12:32:03.794841Z",
+     "start_time": "2025-07-10T12:32:03.736457Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "search_pattern = os.path.join(ground_truth_notebooks_directory, \"*\", \"phenopackets\", \"*.json\")\n",
@@ -163,8 +201,17 @@
     "print(\"hello2\")  # print hello 2 as a sanity check"
    ],
    "id": "8118b55fc2741c2b",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Discovered 7969 ground-truth JSON files\n",
+      "hello2\n"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -177,7 +224,12 @@
    "id": "9a9faff43b491b26"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T12:32:06.570842Z",
+     "start_time": "2025-07-10T12:32:06.563194Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Setup conversion for input material to LLM-compatible txt\n",
@@ -209,8 +261,16 @@
     "print(\"hello3\")  # print hello 3 as a sanity check"
    ],
    "id": "231c1c375a6ec410",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello3\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -228,7 +288,14 @@
   {
    "cell_type": "code",
    "id": "235eaff7-4f21-4a21-81bf-e97236ca26d1",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-07-10T12:32:08.577905Z"
+    }
+   },
    "source": [
     "list_input_texts    = []\n",
     "list_truth_packets  = []\n",
@@ -240,7 +307,7 @@
     "    truth_path  = row[\"truth\"]\n",
     "\n",
     "    # Load the clinical PDF\n",
-    "    clinical_PDF = load_clinical_PDF(pdf_path)\n",
+    "    clinical_PDF = load_clinical_pdf(pdf_path)\n",
     "    list_input_texts.append(clinical_PDF)\n",
     "\n",
     "    # Load and validate the ground-truth Phenopacket\n",
