Try to improve caching of clinical texts

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -25,8 +25,8 @@
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-11T08:50:58.859284Z",
-     "start_time": "2025-07-11T08:50:58.854051Z"
+     "end_time": "2025-07-11T11:33:54.625420Z",
+     "start_time": "2025-07-11T11:33:54.606618Z"
     }
    },
    "source": [
@@ -118,7 +118,7 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -133,8 +133,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-11T08:51:03.630810Z",
-     "start_time": "2025-07-11T08:51:03.612232Z"
+     "end_time": "2025-07-11T11:33:57.426824Z",
+     "start_time": "2025-07-11T11:33:57.403262Z"
     }
    },
    "cell_type": "code",
@@ -171,7 +171,7 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -186,8 +186,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-11T08:51:06.084214Z",
-     "start_time": "2025-07-11T08:51:06.001628Z"
+     "end_time": "2025-07-11T11:33:59.203324Z",
+     "start_time": "2025-07-11T11:33:59.077383Z"
     }
    },
    "cell_type": "code",
@@ -212,7 +212,7 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -227,8 +227,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-11T08:51:10.076370Z",
-     "start_time": "2025-07-11T08:51:10.067826Z"
+     "end_time": "2025-07-11T11:34:00.685916Z",
+     "start_time": "2025-07-11T11:34:00.676547Z"
     }
    },
    "cell_type": "code",
@@ -271,7 +271,7 @@
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 28
   },
   {
    "metadata": {},
@@ -290,24 +290,35 @@
   {
    "cell_type": "code",
    "id": "235eaff7-4f21-4a21-81bf-e97236ca26d1",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-07-11T11:34:02.603137Z"
+    }
+   },
    "source": [
+    "# First, read the manifest\n",
+    "dataframe_cases = pd.read_csv(dataset_csv_path)\n",
+    "\n",
+    "# Cache to avoid reconverting the same PDF\n",
+    "_text_cache: Dict[str,str] = {}\n",
+    "for pdf_path in dataframe_cases[\"input\"].unique():\n",
+    "    _text_cache[pdf_path] = load_clinical_pdf(pdf_path)\n",
+    "    print(f\"Cached text for {os.path.basename(pdf_path)}\")\n",
+    "\n",
+    "# Now iterate over rows\n",
     "list_input_texts    = []\n",
     "list_truth_packets  = []\n",
     "list_patient_ids    = []\n",
     "\n",
-    "# cache to avoid reconverting the same PDF\n",
-    "_text_cache: Dict[str,str] = {}\n",
-    "\n",
-    "for idx, case in enumerate(dataframe_cases.itertuples(index=False)):\n",
+    "for case in dataframe_cases.itertuples(index=False):\n",
     "    pmid_value  = case.pmid\n",
     "    pdf_path    = case.input\n",
     "    truth_path  = case.truth\n",
     "\n",
     "    # Convert PDFs & load cached text\n",
-    "    if pdf_path not in _text_cache:\n",
-    "        _text_cache[pdf_path] = load_clinical_pdf(pdf_path)\n",
-    "        # txt = load_clinical_pdf(pdf_path)\n",
     "    clinical_text = _text_cache[pdf_path]\n",
     "    list_input_texts.append(clinical_text)\n",
     "\n",
@@ -325,7 +336,18 @@
     "\n",
     "print(\"hello4\")  # print hello 4 as a sanity check"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n"
+     ]
+    }
+   ],
    "execution_count": null
   },
   {
