Try modifying to build the text cache for each UNIQUE PDF

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -297,16 +297,19 @@
     }
    },
    "source": [
-    "# First, read the manifest\n",
-    "dataframe_cases = pd.read_csv(dataset_csv_path)\n",
+    "# We already have dataframe_cases from Step 1—no need to re‐read it.\n",
     "\n",
-    "# Cache to avoid reconverting the same PDF\n",
+    "\n",
+    "# Build the text cache for each UNIQUE PDF to avoid reconverting:\n",
+    "import warnings\n",
     "_text_cache: Dict[str,str] = {}\n",
-    "for pdf_path in dataframe_cases[\"input\"].unique():\n",
-    "    _text_cache[pdf_path] = load_clinical_pdf(pdf_path)\n",
-    "    print(f\"Cached text for {os.path.basename(pdf_path)}\")\n",
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter(\"ignore\")\n",
+    "    for pdf_path in dataframe_cases[\"input\"].unique():\n",
+    "        _text_cache[pdf_path] = load_clinical_pdf(pdf_path)\n",
+    "        print(f\"Cached text for {os.path.basename(pdf_path)}\")\n",
     "\n",
-    "# Now iterate over rows\n",
+    "# Now iterate over rows, should lookup only once\n",
     "list_input_texts    = []\n",
     "list_truth_packets  = []\n",
     "list_patient_ids    = []\n",
