Added a hashtag so I could comment this error: ------------------------------------------------------------------------ ParseError                                Traceback (most recent call last) File ~/miniconda3/envs/p5/lib/python3.13/site-packages/google/protobuf/json_format.py:544, in _Parser._ConvertFieldValuePair(self, js, message, path)     543     continue --> 544   raise ParseError(     545       ('Message type "{0}" has no field named "{1}" at "{2}".\n'     546        ' Available Fields(except extensions): "{3}"').format(     547            message_descriptor.full_name, name, path,     548            [f.json_name for f in message_descriptor.fields]))     549 if name in names:
ParseError: Message type "org.phenopackets.schema.v2.Phenopacket" has no field named "cells" at "Phenopacket".
 Available Fields(except extensions): "['id', 'subject', 'phenotypicFeatures', 'measurements', 'biosamples', 'interpretations', 'diseases', 'medicalActions', 'files', 'metaData']"

During handling of the above exception, another exception occurred:

ParseError                                Traceback (most recent call last)
File ~/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/notebooks/utils/phenopacket.py:44, in Phenopacket.__init__(self, phenopacket_json)
     43 try:
---> 44     _ = ParseDict(phenopacket_json, ProtoPhenopacket())
     45     feats = phenopacket_json["phenotypicFeatures"]

File ~/miniconda3/envs/p5/lib/python3.13/site-packages/google/protobuf/json_format.py:461, in ParseDict(js_dict, message, ignore_unknown_fields, descriptor_pool, max_recursion_depth)
    460 parser = _Parser(ignore_unknown_fields, descriptor_pool, max_recursion_depth)
--> 461 parser.ConvertMessage(js_dict, message, '')
    462 return message

File ~/miniconda3/envs/p5/lib/python3.13/site-packages/google/protobuf/json_format.py:502, in _Parser.ConvertMessage(self, value, message, path)
    501 else:
--> 502   self._ConvertFieldValuePair(value, mes

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -365,7 +365,8 @@
     "assert len(list_input_texts) == len(list_truth_packets)\n",
     "print(\"Loaded %d clinical texts and %d ground-truth packets for %d unique patients\" % (len(list_input_texts), len(list_truth_packets), len(list_patient_ids)))\n",
     "\n",
-    "print(\"hello4\")  # print hello 4 as a sanity check"
+    "print(\"hello4\")  # print hello 4 as a sanity check\n",
+    "#"
    ],
    "outputs": [
     {
