--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -240,9 +240,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 4. Load Clinical PDF and Ground-Truth Phenopackets\n",
+    "## 4. Load Clinical PDFs and Ground-Truth Phenopackets\n",
     "\n",
-    "Iterate over each case, load the clinical PDF text #   and the corresponding ground-truth Phenopacket object.\n",
+    "Iterate over each case, load the clinical PDF text and the corresponding ground-truth Phenopacket object.\n",
     "\n",
     "- `list_inputs_texts`: raw clinical PDFs\n",
     "- `list_truth_packets`: parsed Phenopacket objects from JSON files\n",
