Fix operation where we drop duplicates but we never printed the before count, so there was no way to verify it actually ran. Also the `print` call for “after deduplication” might be malformed to show a tuple rather than formatted text. Change Step 1 to track  both original and post-dedup counts to confirm dedup actually happened. Then use an f-string to try to avoid the tuple‐print bug.

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -119,12 +119,13 @@
     "# Load datasets\n",
     "dataframe_cases = pd.read_csv(dataset_csv_path)\n",
     "print(\"Loaded %d rows from dataset CSV\" % len(dataframe_cases))\n",
+    "# Load cases & deduplicate PMIDs, with start/end counts\n",
+    "orig_count = len(dataframe_cases)\n",
+    "print(f\"Before deduplication: {orig_count} total cases\")\n",
     "\n",
     "# Drop duplicate PMIDs\n",
-    "dataframe_cases = dataframe_cases.drop_duplicates(\"pmid\").reset_index(drop=True) # This may be too aggressive and I need to check if this is a good approach\n",
-    "print(\"After deduplication: %d unique PMID cases\", len(dataframe_cases), \"unique PMID cases\")\n",
-    "\n",
-    "# No deduplication, we just want one row in the CSV per input-truth pair\n",
+    "dataframe_cases = dataframe_cases.drop_duplicates(subset=\"pmid\", keep=\"first\").reset_index(drop=True) # This may be too aggressive and I need to check if this is a good approach\n",
+    "print(\"%d\", {orig_count - len(dataframe_cases)}, \" duplicates removed\")\n",
     "\n",
     "# Verify required columns\n",
     "required_columns = {\"pmid\", \"input\", \"truth\"}\n",
