Try starting a mechanism to only intake 100 PDFs at a time

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -156,6 +156,22 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "# Prepare phenopacket JSON cache, skip logic, and cap how many to process\n",
+    "import hashlib\n",
+    "MAX_LOAD = 100\n",
+    "cache_path = \"phenopacket_cache.json\"\n",
+    "\n",
+    "try:\n",
+    "    with open(cache_path) as f:\n",
+    "        cache = json.load(f)\n",
+    "except FileNotFoundError:\n",
+    "    cache = {}\n",
+    "\n",
+    "existing_hashes = {info[\"hash\"] for info in cache.values()}\n",
+    "skipped_pdfs  = []\n",
+    "loaded_count  = 0\n",
+    "# Can write the cache again at the very end\n",
+    "\n",
     "search_pattern = os.path.join(ground_truth_notebooks_directory, \"*\", \"phenopackets\", \"*.json\")\n",
     "truth_json_filepaths = glob.glob(search_pattern, recursive=True)\n",
     "if not truth_json_filepaths:\n",
