use `os` for system paths

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -156,10 +156,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# Prepare phenopacket JSON cache, skip logic, and cap how many to process\n",
+    "# Prepare phenopacket JSON cache, skip logic, and cap how many PDFs to process\n",
     "import hashlib\n",
     "MAX_LOAD = 100\n",
-    "cache_path = \"phenopacket_cache.json\"\n",
+    "phenopacket_cache_path = os.path.join(experimental_data_root, \"phenopacket_cache.json\")\n",
     "\n",
     "try:\n",
     "    with open(cache_path) as f:\n",
