Add discovery of `phenopacket-store`

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -158,20 +158,28 @@
    "source": [
     "# Prepare phenopacket JSON cache, skip logic, and cap how many PDFs to process\n",
     "import hashlib\n",
+    "\n",
+    "# Set number of cases to process in this run\n",
     "MAX_LOAD = 100\n",
+    "\n",
+    "# Persist cache of already-parsed phenopacket cases\n",
     "phenopacket_cache_path = os.path.join(experimental_data_root, \"phenopacket_cache.json\")\n",
     "\n",
+    "# Load existing cache is present\n",
     "try:\n",
-    "    with open(cache_path) as f:\n",
-    "        cache = json.load(f)\n",
+    "    with open(phenopacket_cache_path, \"r\") as f:\n",
+    "        phenopacket_cache = json.load(f)\n",
     "except FileNotFoundError:\n",
-    "    cache = {}\n",
+    "    phenopacket_cache = {}\n",
     "\n",
-    "existing_hashes = {info[\"hash\"] for info in cache.values()}\n",
+    "# Lookup parsed PDFs - by MD5 hash?\n",
+    "# TODO: check aboud SHA-256 or SHA-512\n",
+    "existing_hashes = {info[\"hash\"] for info in phenopacket_cache.values()}\n",
+    "\n",
+    "# Prepare to record skipped cases due to failuers\n",
     "skipped_pdfs  = []\n",
-    "loaded_count  = 0\n",
-    "# Can write the cache again at the very end\n",
     "\n",
+    "# Finding all ground-truth phenopacket JSON files\n",
     "search_pattern = os.path.join(ground_truth_notebooks_directory, \"*\", \"phenopackets\", \"*.json\")\n",
     "truth_json_filepaths = glob.glob(search_pattern, recursive=True)\n",
     "if not truth_json_filepaths:\n",
@@ -204,22 +212,22 @@
     "# Initialize converter once\n",
     "pdf_to_text_converter = DocumentConverter()\n",
     "\n",
-    "# Path to persistent cache\n",
-    "cache_path = os.path.join(experimental_data_root, \"text_cache.pkl\")\n",
+    "# Path to persistent cache of PDF text\n",
+    "text_cache_path = os.path.join(experimental_data_root, \"text_cache.pkl\")\n",
     "# Load or initialize cache\n",
-    "if os.path.exists(cache_path):\n",
-    "    with open(cache_path, \"rb\") as f:\n",
+    "if os.path.exists(text_cache_path):\n",
+    "    with open(text_cache_path, \"rb\") as f:\n",
     "        _text_cache: Dict[str, str] = pickle.load(f)\n",
     "    print(f\"Loaded text cache with {len(_text_cache)} entries\")\n",
     "else:\n",
     "    _text_cache: Dict[str, str] = {}\n",
     "    print(\"Initialized empty text cache\")\n",
     "\n",
-    "def load_clinical_pdf(input_path):\n",
+    "def load_clinical_pdf(input_path: str) -> str:\n",
     "    \"\"\"\n",
-    "    Convert .txt or .pdf file at input_path into a plain text string.\n",
-    "    Uses in-memory cache first; writes new text back to cache only when the cache is explicitly saved at the end of the pipeline.\n",
-    "    Raises FileNotFoundError if the file does not exist.\n",
+    "    Convert .txt or .pdf file at \"input_path\" into a plain text string.\n",
+    "    Use the in-memory cache first; write new text back to the cache only when the cache is explicitly saved at the end of the pipeline.\n",
+    "    Raise FileNotFoundError or ConversionError if the file does not exist.\n",
     "    \"\"\"\n",
     "    # Return cache if it exists in memory\n",
     "    if input_path in _text_cache:\n",
