Adjust and simplify some code in the PDF conversion step

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -239,8 +239,7 @@
     "\n",
     "    # If it's already plain text, read and strip any header\n",
     "    if input_path.lower().endswith(\".txt\"):\n",
-    "        with open(input_path, encoding=\"utf-8\") as f:\n",
-    "            content = f.read()\n",
+    "        content = open(input_path, encoding=\"utf-8\").read()\n",
     "        # Remove any leading markers\n",
     "        return content.split(\"[text]\")[-1]\n",
     "    else:\n",
