Modify Step 4 with the new implementations

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -284,7 +284,10 @@
     "# Build the text cache for each UNIQUE PDF to avoid reconverting:\n",
     "# Going to try building it only once and skip any bad PDFs like \"scripts/data/tmp/phenopacket_store/pmid_pdfs/PMID_32325141.pdf\", which made `load_clinical_pdf` raise a ``ConversionError causing the whole cell to fail\n",
     "import warnings\n",
-    "from docling.document_converter import ConversionError\n",
+    "\n",
+    "from google.protobuf.json_format import ParseDict\n",
+    "from phenopackets import Phenopacket as ProtoPhenopacket\n",
+    "\n",
     "_text_cache: Dict[str,str] = {}\n",
     "\n",
     "for pdf_path in dataframe_cases[\"input\"].unique():\n",
@@ -344,9 +347,9 @@
    "cell_type": "code",
    "source": [
     "# Save cache to disk\n",
-    "with open(cache_path,\"wb\") as f:\n",
+    "with open(text_cache_path,\"wb\") as f:\n",
     "    pickle.dump(_text_cache, f)\n",
-    "print(f\"Saved text cache with {len(_text_cache)} entries to {cache_path}\")\n",
+    "print(f\"Saved text cache with {len(_text_cache)} entries to {text_cache_path}\")\n",
     "\n",
     "# 1) Prompt for just HPO labels\n",
     "hpo_prompt = (\n",
