--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -23,7 +23,12 @@
   {
    "cell_type": "code",
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-14T12:14:21.160971Z",
+     "start_time": "2025-07-14T12:14:21.145032Z"
+    }
+   },
    "source": [
     "# Basic Setup\n",
     "import sys, os, glob, json, subprocess, pickle\n",
@@ -99,8 +104,22 @@
     "\n",
     "print(\"hello0\")  # print hello 0 as a sanity check"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PDF inputs folder:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/pmid_pdfs\n",
+      "Ground truth folder:     /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
+      "Dataset CSV path:        /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\n",
+      "LLM outputs folder:      /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/llm_output_dir\n",
+      "Validated JSONs folder:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/validated_jsons\n",
+      "Evaluation report path:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/reports/first_report.json\n",
+      "hello0\n"
+     ]
+    }
+   ],
+   "execution_count": 40
   },
   {
    "metadata": {},
@@ -113,7 +132,12 @@
    "id": "dabf5f01d8e6a670"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-14T12:14:23.166290Z",
+     "start_time": "2025-07-14T12:14:23.126646Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Load datasets\n",
@@ -125,7 +149,8 @@
     "\n",
     "# Drop duplicate PMIDs\n",
     "dataframe_cases = dataframe_cases.drop_duplicates(subset=\"pmid\", keep=\"first\").reset_index(drop=True) # This may be too aggressive and I need to check if this is a good approach\n",
-    "print(\"%d\", {orig_count - len(dataframe_cases)}, \" duplicates removed\")\n",
+    "removed = orig_count - len(dataframe_cases)\n",
+    "print(f\"{removed} duplicates removed (now {len(dataframe_cases)} unique PMIDs)\")\n",
     "\n",
     "# Verify required columns\n",
     "required_columns = {\"pmid\", \"input\", \"truth\"}\n",
@@ -139,8 +164,19 @@
     "print(\"hello1\")  # print hello 1 as a sanity check"
    ],
    "id": "598b33092ab85352",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 5135 rows from dataset CSV\n",
+      "Before deduplication: 5135 total cases\n",
+      "%d {4501}  duplicates removed\n",
+      "hello1\n"
+     ]
+    }
+   ],
+   "execution_count": 41
   },
   {
    "metadata": {},
@@ -153,7 +189,12 @@
    "id": "2a1755b2eb294368"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-14T12:14:29.355301Z",
+     "start_time": "2025-07-14T12:14:29.294583Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Prepare phenopacket JSON cache, skip logic, and cap how many PDFs to process\n",
@@ -190,8 +231,17 @@
     "print(\"hello2\")  # print hello 2 as a sanity check"
    ],
    "id": "8118b55fc2741c2b",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Discovered 7969 ground-truth JSON files\n",
+      "hello2\n"
+     ]
+    }
+   ],
+   "execution_count": 42
   },
   {
    "metadata": {},
@@ -204,7 +254,12 @@
    "id": "9a9faff43b491b26"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-14T12:14:31.270181Z",
+     "start_time": "2025-07-14T12:14:31.262535Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Setup conversion for input material to LLM-compatible txt\n",
@@ -257,8 +312,17 @@
     "print(\"hello3\")  # print hello 3 as a sanity check"
    ],
    "id": "231c1c375a6ec410",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated f-string literal (detected at line 42) (1974408151.py, line 42)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[43]\u001B[39m\u001B[32m, line 42\u001B[39m\n\u001B[31m    \u001B[39m\u001B[31mraise ConversionError(f\"Could not convert {os.path.basename(input_path)}: {e}\u001B[39m\n                          ^\n\u001B[31mSyntaxError\u001B[39m\u001B[31m:\u001B[39m unterminated f-string literal (detected at line 42)\n"
+     ]
+    }
+   ],
+   "execution_count": 43
   },
   {
    "metadata": {},
