Adjusted discovery, expand `skipped_pdfs` to store reasons for skipping over errors

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -209,16 +209,19 @@
     "# Load existing cache is present\n",
     "try:\n",
     "    with open(phenopacket_cache_path, \"r\") as f:\n",
-    "        phenopacket_cache = json.load(f)\n",
+    "        phenopacket_cache: Dict[str, Any] = json.load(f)\n",
+    "        print(f\"Loaded phenopacket cache with {len(phenopacket_cache)} entries\")\n",
     "except FileNotFoundError:\n",
     "    phenopacket_cache = {}\n",
+    "    print(\"Initialized empty phenopacket cache\")\n",
     "\n",
     "# Lookup parsed PDFs - by MD5 hash?\n",
     "# TODO: check aboud SHA-256 or SHA-512\n",
     "existing_hashes = {info[\"hash\"] for info in phenopacket_cache.values()}\n",
     "\n",
-    "# Prepare to record skipped cases due to failuers\n",
-    "skipped_pdfs  = []\n",
+    "# Prepare to record skipped cases due to failures, as well as the reasons why\n",
+    "skipped_pdfs: List[Dict[str, str]] = []\n",
+    "loaded_count = 0\n",
     "\n",
     "# Finding all ground-truth phenopacket JSON files\n",
     "search_pattern = os.path.join(ground_truth_notebooks_directory, \"*\", \"phenopackets\", \"*.json\")\n",
