--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -25,8 +25,8 @@
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-14T12:14:21.160971Z",
-     "start_time": "2025-07-14T12:14:21.145032Z"
+     "end_time": "2025-07-14T12:36:25.725283Z",
+     "start_time": "2025-07-14T12:36:25.716440Z"
     }
    },
    "source": [
@@ -119,7 +119,7 @@
      ]
     }
    ],
-   "execution_count": 40
+   "execution_count": 44
   },
   {
    "metadata": {},
@@ -134,8 +134,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-14T12:14:23.166290Z",
-     "start_time": "2025-07-14T12:14:23.126646Z"
+     "end_time": "2025-07-14T12:36:27.493391Z",
+     "start_time": "2025-07-14T12:36:27.471209Z"
     }
    },
    "cell_type": "code",
@@ -171,12 +171,12 @@
      "text": [
       "Loaded 5135 rows from dataset CSV\n",
       "Before deduplication: 5135 total cases\n",
-      "%d {4501}  duplicates removed\n",
+      "4501 duplicates removed (now 634 unique PMIDs)\n",
       "hello1\n"
      ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 45
   },
   {
    "metadata": {},
@@ -191,8 +191,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-14T12:14:29.355301Z",
-     "start_time": "2025-07-14T12:14:29.294583Z"
+     "end_time": "2025-07-14T12:36:29.445191Z",
+     "start_time": "2025-07-14T12:36:29.388628Z"
     }
    },
    "cell_type": "code",
@@ -239,12 +239,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Initialized empty phenopacket cache\n",
       "Discovered 7969 ground-truth JSON files\n",
       "hello2\n"
      ]
     }
    ],
-   "execution_count": 42
+   "execution_count": 46
   },
   {
    "metadata": {},
@@ -259,8 +260,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-14T12:14:31.270181Z",
-     "start_time": "2025-07-14T12:14:31.262535Z"
+     "end_time": "2025-07-14T12:36:31.281861Z",
+     "start_time": "2025-07-14T12:36:31.149473Z"
     }
    },
    "cell_type": "code",
@@ -306,7 +307,8 @@
     "            doc = pdf_to_text_converter.convert(input_path)\n",
     "            content = doc.document.export_to_text()\n",
     "        except ConversionError as e:\n",
-    "            raise ConversionError(f\"Could not convert {os.path.basename(input_path)}: {e}\n",
+    "            raise ConversionError(f\"Could not convert {os.path.basename(input_path)}: {e}\")\n",
+    "\n",
     "\n",
     "    # Save new text in memory and write updated cache to disk later\n",
     "    _text_cache[input_path] = content\n",
@@ -317,15 +319,15 @@
    "id": "231c1c375a6ec410",
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated f-string literal (detected at line 42) (1974408151.py, line 42)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[43]\u001B[39m\u001B[32m, line 42\u001B[39m\n\u001B[31m    \u001B[39m\u001B[31mraise ConversionError(f\"Could not convert {os.path.basename(input_path)}: {e}\u001B[39m\n                          ^\n\u001B[31mSyntaxError\u001B[39m\u001B[31m:\u001B[39m unterminated f-string literal (detected at line 42)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized empty text cache\n",
+      "hello3\n"
      ]
     }
    ],
-   "execution_count": 43
+   "execution_count": 47
   },
   {
    "metadata": {},
