Remove redundant cache and enforce the maximum limit of clinical inputs as well schema enforcement to prevent unknown field errors

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -348,27 +348,12 @@
    "id": "235eaff7-4f21-4a21-81bf-e97236ca26d1",
    "metadata": {},
    "source": [
-    "# We already read dataframe_cases in Step 1, so just going to reuse it below:\n",
+    "# Load Clinical PDFs and Ground-Truth Phenopackets (with full skip‐tracking & deduplication)\n",
+    "# Watch for any \"bad\" PDFs like \"scripts/data/tmp/phenopacket_store/pmid_pdfs/PMID_32325141.pdf\", which made `load_clinical_pdf` raise a ``ConversionError causing the whole cell to fail\n",
     "\n",
-    "# Build the text cache for each UNIQUE PDF to avoid reconverting:\n",
-    "# Going to try building it only once and skip any bad PDFs like \"scripts/data/tmp/phenopacket_store/pmid_pdfs/PMID_32325141.pdf\", which made `load_clinical_pdf` raise a ``ConversionError causing the whole cell to fail\n",
     "import warnings\n",
-    "\n",
-    "from google.protobuf.json_format import ParseDict\n",
+    "from google.protobuf.json_format import ParseDict, ParseError\n",
     "from phenopackets import Phenopacket as ProtoPhenopacket\n",
-    "\n",
-    "_text_cache: Dict[str,str] = {}\n",
-    "\n",
-    "for pdf_path in dataframe_cases[\"input\"].unique():\n",
-    "    try:\n",
-    "        with warnings.catch_warnings():\n",
-    "            warnings.simplefilter(\"ignore\")\n",
-    "            _text_cache[pdf_path] = load_clinical_pdf(pdf_path)\n",
-    "        print(f\"Cached text for {os.path.basename(pdf_path)}\")\n",
-    "    except ConversionError as e:\n",
-    "        # Log & store empty string so downstream code still lines up\n",
-    "        print(f\"Skipping unreadable PDF {os.path.basename(pdf_path)}: {e}\")\n",
-    "        _text_cache[pdf_path] = \"\"\n",
     "\n",
     "# Now iterate over rows, should lookup only once\n",
     "list_input_texts    = []\n",
@@ -380,20 +365,60 @@
     "    pdf_path    = case.input\n",
     "    truth_path  = case.truth\n",
     "\n",
-    "    # Convert PDFs & load cached text\n",
-    "    clinical_text = _text_cache[pdf_path]\n",
+    "    # Compute an MD5 of the PDF to detect reruns\n",
+    "    try:\n",
+    "        with open(pdf_path, \"rb\") as f:\n",
+    "            pdf_bytes = f.read()\n",
+    "        pdf_hash = hashlib.md5(pdf_bytes).hexdigest()\n",
+    "    except Exception as e:\n",
+    "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": f\"I/O error computing hash: {e}\"})\n",
+    "        continue\n",
+    "    # Skip if we already processed this PDF\n",
+    "    if pdf_hash in existing_hashes:\n",
+    "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": \"already in cache\"})\n",
+    "        continue\n",
+    "\n",
+    "    # Enforce MAX_LOAD\n",
+    "    if loaded_count >= MAX_LOAD:\n",
+    "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": \"max load reached\"})\n",
+    "        continue\n",
+    "\n",
+    "    # Convert PDF to text\n",
+    "    try:\n",
+    "        clinical_text = load_clinical_pdf(pdf_path)\n",
+    "    except ConversionError as e:\n",
+    "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": f\"conversion error: {e}\"})\n",
+    "        continue\n",
+    "\n",
+    "    Load raw JSON and validate with ignore_unknown_fields\n",
+    "    try:\n",
+    "        raw_true_packet = json.load(open(truth_path, \"r\", encoding=\"utf-8\"))\n",
+    "        proto = ProtoPhenopacket()\n",
+    "        ParseDict(raw_true_packet, proto, ignore_unknown_fields=True)\n",
+    "    except (ParseError, json.JSONDecodeError, FileNotFoundError) as e:\n",
+    "        skipped_pdfs.append({\"pmid\": pmid_value, \"truth\": truth_path, \"reason\": f\"schema parse error: {e}\" })\n",
+    "        continue\n",
+    "\n",
+    "    # Wrap in util Phenopacket class to catch missing phenotypicFeatures\n",
+    "    try:\n",
+    "        truth_packet = Phenopacket(raw_true_packet)\n",
+    "    except InvalidPhenopacketError as e:\n",
+    "        skipped_pdfs.append({\"pmid\": pmid_value, \"truth\": truth_path, \"reason\": f\"phenopacket invalid: {e}\"})\n",
+    "        continue\n",
+    "\n",
+    "    # Record in memory caches and lists\n",
+    "    phenopacket_cache[str(pmid)] = {\"hash\": pdf_hash, \"json\": raw_true_packet}\n",
+    "    existing_hashes.add(pdf_hash)\n",
+    "\n",
     "    list_input_texts.append(clinical_text)\n",
-    "\n",
-    "    # Load the ground-truth Phenopacket\n",
-    "    truth_packet = Phenopacket.load_from_file(truth_path)\n",
     "    list_truth_packets.append(truth_packet)\n",
+    "    list_patient_ids.append(truth_packet.to_json()[\"subject\"][\"id\"])\n",
     "\n",
-    "    # Extract per-patient IDs from raw JSON\n",
-    "    raw_true_packet = truth_packet.to_json()\n",
-    "    patient_id = raw_true_packet[\"subject\"][\"id\"]\n",
-    "    list_patient_ids.append(patient_id)\n",
+    "    loaded_count += 1\n",
     "\n",
-    "assert len(list_input_texts) == len(list_truth_packets)\n",
+    "    print(f\"Loaded {loaded_count} new cases, skipped {len(skipped_pdfs)} so far\")\n",
+    "\n",
+    "assert len(list_input_texts) == len(list_truth_packets) == len(list_patient_ids)\n",
     "print(\"Loaded %d clinical texts and %d ground-truth packets for %d unique patients\" % (len(list_input_texts), len(list_truth_packets), len(list_patient_ids)))\n",
     "\n",
     "print(\"hello4\")  # print hello 4 as a sanity check"
