--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -25,8 +25,8 @@
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-14T12:36:25.725283Z",
-     "start_time": "2025-07-14T12:36:25.716440Z"
+     "end_time": "2025-07-14T12:57:08.741821Z",
+     "start_time": "2025-07-14T12:57:08.733763Z"
     }
    },
    "source": [
@@ -119,7 +119,7 @@
      ]
     }
    ],
-   "execution_count": 44
+   "execution_count": 53
   },
   {
    "metadata": {},
@@ -134,8 +134,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-14T12:36:27.493391Z",
-     "start_time": "2025-07-14T12:36:27.471209Z"
+     "end_time": "2025-07-14T12:57:09.899396Z",
+     "start_time": "2025-07-14T12:57:09.868698Z"
     }
    },
    "cell_type": "code",
@@ -176,7 +176,7 @@
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 54
   },
   {
    "metadata": {},
@@ -191,8 +191,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-14T12:36:29.445191Z",
-     "start_time": "2025-07-14T12:36:29.388628Z"
+     "end_time": "2025-07-14T12:57:11.263659Z",
+     "start_time": "2025-07-14T12:57:11.199905Z"
     }
    },
    "cell_type": "code",
@@ -245,7 +245,7 @@
      ]
     }
    ],
-   "execution_count": 46
+   "execution_count": 55
   },
   {
    "metadata": {},
@@ -260,8 +260,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-14T12:36:31.281861Z",
-     "start_time": "2025-07-14T12:36:31.149473Z"
+     "end_time": "2025-07-14T12:57:12.444038Z",
+     "start_time": "2025-07-14T12:57:12.436515Z"
     }
    },
    "cell_type": "code",
@@ -327,7 +327,7 @@
      ]
     }
    ],
-   "execution_count": 47
+   "execution_count": 56
   },
   {
    "metadata": {},
@@ -346,7 +346,14 @@
   {
    "cell_type": "code",
    "id": "235eaff7-4f21-4a21-81bf-e97236ca26d1",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-07-14T12:57:13.670751Z"
+    }
+   },
    "source": [
     "# Load Clinical PDFs and Ground-Truth Phenopackets (with full skip‐tracking & deduplication)\n",
     "# Watch for any \"bad\" PDFs like \"scripts/data/tmp/phenopacket_store/pmid_pdfs/PMID_32325141.pdf\", which made `load_clinical_pdf` raise a ``ConversionError causing the whole cell to fail\n",
@@ -361,11 +368,11 @@
     "list_patient_ids    = []\n",
     "\n",
     "for case in dataframe_cases.itertuples(index=False):\n",
-    "    pmid_value  = case.pmid\n",
-    "    pdf_path    = case.input\n",
-    "    truth_path  = case.truth\n",
+    "    pmid_value = case.pmid\n",
+    "    pdf_path   = case.input\n",
+    "    truth_path = case.truth\n",
     "\n",
-    "    # Compute an MD5 of the PDF to detect reruns\n",
+    "    # 1) Compute MD5 of the PDF to detect reruns\n",
     "    try:\n",
     "        with open(pdf_path, \"rb\") as f:\n",
     "            pdf_bytes = f.read()\n",
@@ -373,41 +380,42 @@
     "    except Exception as e:\n",
     "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": f\"I/O error computing hash: {e}\"})\n",
     "        continue\n",
-    "    # Skip if we already processed this PDF\n",
+    "\n",
+    "    # 2) Skip if already processed\n",
     "    if pdf_hash in existing_hashes:\n",
     "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": \"already in cache\"})\n",
     "        continue\n",
     "\n",
-    "    # Enforce MAX_LOAD\n",
+    "    # 3) Enforce MAX_LOAD\n",
     "    if loaded_count >= MAX_LOAD:\n",
     "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": \"max load reached\"})\n",
     "        continue\n",
     "\n",
-    "    # Convert PDF to text\n",
+    "    # 4) Convert PDF to text\n",
     "    try:\n",
     "        clinical_text = load_clinical_pdf(pdf_path)\n",
     "    except ConversionError as e:\n",
     "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": f\"conversion error: {e}\"})\n",
     "        continue\n",
     "\n",
-    "    Load raw JSON and validate with ignore_unknown_fields\n",
+    "    # 5) Load raw JSON and validate with ignore_unknown_fields\n",
     "    try:\n",
     "        raw_true_packet = json.load(open(truth_path, \"r\", encoding=\"utf-8\"))\n",
     "        proto = ProtoPhenopacket()\n",
     "        ParseDict(raw_true_packet, proto, ignore_unknown_fields=True)\n",
     "    except (ParseError, json.JSONDecodeError, FileNotFoundError) as e:\n",
-    "        skipped_pdfs.append({\"pmid\": pmid_value, \"truth\": truth_path, \"reason\": f\"schema parse error: {e}\" })\n",
+    "        skipped_pdfs.append({\"pmid\": pmid_value, \"truth\": truth_path, \"reason\": f\"schema parse error: {e}\"})\n",
     "        continue\n",
     "\n",
-    "    # Wrap in util Phenopacket class to catch missing phenotypicFeatures\n",
+    "    # 6) Wrap in util Phenopacket to ensure phenotypicFeatures exists\n",
     "    try:\n",
     "        truth_packet = Phenopacket(raw_true_packet)\n",
     "    except InvalidPhenopacketError as e:\n",
     "        skipped_pdfs.append({\"pmid\": pmid_value, \"truth\": truth_path, \"reason\": f\"phenopacket invalid: {e}\"})\n",
     "        continue\n",
     "\n",
-    "    # Record in memory caches and lists\n",
-    "    phenopacket_cache[str(pmid)] = {\"hash\": pdf_hash, \"json\": raw_true_packet}\n",
+    "    # 7) Record in cache & lists\n",
+    "    phenopacket_cache[str(pmid_value)] = {\"hash\": pdf_hash, \"json\": raw_true_packet}\n",
     "    existing_hashes.add(pdf_hash)\n",
     "\n",
     "    list_input_texts.append(clinical_text)\n",
@@ -415,7 +423,6 @@
     "    list_patient_ids.append(truth_packet.to_json()[\"subject\"][\"id\"])\n",
     "\n",
     "    loaded_count += 1\n",
-    "\n",
     "    print(f\"Loaded {loaded_count} new cases, skipped {len(skipped_pdfs)} so far\")\n",
     "\n",
     "assert len(list_input_texts) == len(list_truth_packets) == len(list_patient_ids)\n",
